# public-edging

./: .editorconfig  .gitignore  Cargo.toml  build.rs  package-lock.json  route.rs.template  tailwind.config.js  wrangler.toml
pages/: Cargo.toml
pages/src/: lib.rs  other_file.rs
pages/src/sub_dir/: mod.rs
pages/src/sub_dir/another/: mod.rs
pages/src/sub_dir/other/: mod.rs
router/: Cargo.toml
router/src/: lib.rs
src/: lib.rs  router.rs
src/pages/: mod.rs  test.rs
src/pages/deeeper/: mod.rs
src/pages/deeeper/even_deeper/: mod.rs
src/pages/deeeper/other_dir/: mod.rs
style/: output.css
view/: Cargo.toml
view/src/: app.rs
