[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build-dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
syn = "1.0.107"

[dependencies]
cfg-if = "0.1.2"
worker.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
base64 = "0.21.0"
syn = { version = "1.0.107", features = ["extra-traits"] }

[workspace.dependencies]
worker = "0.0.12"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
members = [
    "pages",
    "router",
]


